--- a/views/summary.html
+++ b/views/summary.html
@@ -15,16 +15,16 @@
         <link rel="stylesheet" href="styles/styles.css">
 
     </head>
-    <body class="bg-light">
+    <body>
         <!--  start navbar   -->
         <nav class="navbar navbar-light bg-light px-3">
             <a class="navbar-brand" href="home">Pet Store</a>
         </nav>
         <!--   end navbar   -->
         <div class="container text-center">
-            <h1>Welcome to My Pets Page</h1>
-            <img class="img-fluid"  src="images/charlieResized.jpg" alt="Image of my dog Charlie">
-            <a class="btn btn-primary my-3 align-self-center" href="order">Order a Pet!</a>
+            <h1>Order Summary</h1>
+            <h4>Thank you for ordering a(n) {{ @SESSION.petColor }} {{ @SESSION.petType }}!</h4>
+
         </div>
     </body>
 </html>
