--- a/views/pet-order.html
+++ b/views/pet-order.html
@@ -28,7 +28,7 @@
                     <label class="col-sm-3 col-form-label">What kind of pet would you like to order?</label>
                     <div class="col-sm-8">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="petType" value="stuffed" id="stuffed" checked>
+                            <input class="form-check-input" type="radio" name="petType" value="stuffed" id="stuffed">
                             <label class="form-check-label" for="stuffed">Stuffed</label>
                         </div>
                         <div class="form-check">
