--- a/views/RoboticPet.html
+++ b/views/RoboticPet.html
@@ -18,31 +18,31 @@
         <div class="form-group">
             <label class="form-label">Select Accessories</label>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="accessories[]" value="Extra Battery Packs" id="extraBatteryPacks">
+                <input class="form-check-input" type="checkbox" name="acc[]" value="Extra Battery Packs" id="extraBatteryPacks">
                 <label class="form-check-label" for="extraBatteryPacks">Extra Battery Packs</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="accessories[]" value="Charging Dock/Station" id="chargingDock">
+                <input class="form-check-input" type="checkbox" name="acc[]" value="Charging Dock/Station" id="chargingDock">
                 <label class="form-check-label" for="chargingDock">Charging Dock/Station</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="accessories[]" value="Voice Module" id="voiceModule">
+                <input class="form-check-input" type="checkbox" name="acc[]" value="Voice Module" id="voiceModule">
                 <label class="form-check-label" for="voiceModule">Voice Module</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="accessories[]" value="Camera Attachment" id="cameraAttachment">
+                <input class="form-check-input" type="checkbox" name="acc[]" value="Camera Attachment" id="cameraAttachment">
                 <label class="form-check-label" for="cameraAttachment">Camera Attachment</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="accessories[]" value="Remote Control" id="remoteControl">
+                <input class="form-check-input" type="checkbox" name="acc[]" value="Remote Control" id="remoteControl">
                 <label class="form-check-label" for="remoteControl">Remote Control</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="accessories[]" value="Custom Skins" id="customSkins">
+                <input class="form-check-input" type="checkbox" name="acc[]" value="Custom Skins" id="customSkins">
                 <label class="form-check-label" for="customSkins">Custom Skins</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="accessories[]" value="Bluetooth Speaker Module" id="bluetoothSpeakerModule">
+                <input class="form-check-input" type="checkbox" name="acc[]" value="Bluetooth Speaker Module" id="bluetoothSpeakerModule">
                 <label class="form-check-label" for="bluetoothSpeakerModule">Bluetooth Speaker Module</label>
             </div>
         </div>
