--- a/views/StuffedPet.html
+++ b/views/StuffedPet.html
@@ -18,36 +18,36 @@
         <div class="form-group">
             <label class="form-label">Please select the size of your pet</label>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="StuffedSize" value="large" id="large">
+                <input class="form-check-input" type="radio" name="size" value="large" id="large">
                 <label class="form-check-label" for="large">Large</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="StuffedSize" value="medium" id="medium">
+                <input class="form-check-input" type="radio" name="size" value="medium" id="medium">
                 <label class="form-check-label" for="medium">Medium</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="StuffedSize" value="small" id="small">
+                <input class="form-check-input" type="radio" name="size" value="small" id="small">
                 <label class="form-check-label" for="small">Small</label>
             </div>
         </div>
         <div class="form-group">
             <label class="form-label">Please select the type of stuffing</label>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="StuffingType" value="cotton" id="cotton">
+                <input class="form-check-input" type="radio" name="stuffingType" value="cotton" id="cotton">
                 <label class="form-check-label" for="cotton">Cotton</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="StuffingType" value="polyester" id="polyester">
+                <input class="form-check-input" type="radio" name="stuffingType" value="polyester" id="polyester">
                 <label class="form-check-label" for="polyester">Polyester</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="StuffingType" value="foam" id="foam">
+                <input class="form-check-input" type="radio" name="stuffingType" value="foam" id="foam">
                 <label class="form-check-label" for="foam">Foam</label>
             </div>
         </div>
         <div class="form-group">
             <label for="material" class="form-label">Please select the material</label>
-            <select class="form-select" name="Material" id="material">
+            <select class="form-select" name="material" id="material">
                 <option value="plush">Plush</option>
                 <option value="velvet">Velvet</option>
                 <option value="fleece">Fleece</option>
@@ -55,7 +55,7 @@
             </select>
         </div>
         <div class="form-group">
-            <button class="btn btn-primary" type="submit">Place Order</button>
+            <button class="btn btn-primary" >Place Order</button>
         </div>
     </form>
 </div>
