--- a/views/summary.html
+++ b/views/summary.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Pets</title>
-        <!-- BOOTSTRAP CDNS ------------------------------------------------>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-              crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
-        <!-- END BOOTSTRAP CDNS --------------------------------------------->
+F<head>
+    <meta charset="UTF-8">
+    <title>Order Summary</title>
+    <!-- BOOTSTRAP CDNS ------------------------------------------------>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <!-- END BOOTSTRAP CDNS --------------------------------------------->
 
-        <link rel="stylesheet" href="styles/styles.css">
+</head>
+<body>
+<!--  start navbar   -->
+<nav class="navbar navbar-light bg-light px-3">
+    <a class="navbar-brand" href="home">Pet Store</a>
+</nav>
+<!--   end navbar   -->
+<div class="container text-center">
+    <h1 class="text-center">Order Summary</h1>
+    <h4>Thank you for ordering a(n) {{ @SESSION.petColor }} {{ @SESSION.petType }}!</h4>
 
-    </head>
-    <body>
-        <!--  start navbar   -->
-        <nav class="navbar navbar-light bg-light px-3">
-            <a class="navbar-brand" href="home">Pet Store</a>
-        </nav>
-        <!--   end navbar   -->
-        <div class="container text-center">
-            <h1>Order Summary</h1>
-            <h4>Thank you for ordering a(n) {{ @SESSION.petColor }} {{ @SESSION.petType }}!</h4>
+    <check if="{{ @SESSION.petType == 'robotic' }}">
 
-        </div>
-    </body>
+            <h4>Accessories:</h4>
+            <ul>
+                <repeat group="{{ @SESSION.pet->getAccessories() }}" value="{{ @accessory }}">
+                    <li>{{ @accessory }}</li>
+                </repeat>
+            </ul>
+
+    </check>
+
+    <check if="{{ @SESSION.petType == 'stuffed' }}">
+
+            <h4>Size: {{ @SESSION.pet->getSize() }}</h4>
+            <h4>Stuffing Type: {{ @SESSION.pet->getStuffingType() }}</h4>
+            <h4>Material: {{ @SESSION.pet->getMaterial() }}</h4>
+
+    </check>
+</div>
+</body>
 </html>
